--- a/web-dacpac/src/componets/form/Form.css
+++ b/web-dacpac/src/componets/form/Form.css
@@ -4,6 +4,7 @@
     height: 470px;
     border: 1px solid #034E7A;
     border-radius: 0.5rem;
+    background-color: white;
 }
 
 @media only screen and (max-width: 620px){
