--- a/web-dacpac/src/componets/header/Header.css
+++ b/web-dacpac/src/componets/header/Header.css
@@ -6,8 +6,14 @@ h1, h2 {
     text-align: center;
 }
 
-.headers-container {
-    margin-right: 96px;
+header h1 {
+    font-weight: 700;
+}
+
+@media screen and (min-width: 576px) {
+    .headers-container {
+        margin-right: 96px;
+    }
 }
 
 header h2 {
