Backround and responsive

--- a/web-dacpac/src/App.css
+++ b/web-dacpac/src/App.css
@@ -5,3 +5,98 @@ h1 {
 h1, h2 {
   color: white;
 }
+
+.parent-container {
+  background: radial-gradient(#ADCDE5, #a4c4db);
+}
+
+@keyframes pan {
+  0% { background-position: 0px 0px; }
+  100% { background-position: 100% 0px; }
+}
+
+.main-container {
+  background-image: url('/tent.svg');
+  background-repeat: repeat;
+  background-size: 3%; /* Adjust tile size */
+  animation: pan 270s linear infinite;
+}
+
+.child-container {
+  background: radial-gradient(#ADCDE500, #ADCDE588);
+  overflow: hidden;
+}
+
+@keyframes slide-in-left {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.slide-in-left {
+  transform: translateX(-100%);
+  opacity: 0;
+
+  /* Animation */
+  animation: slide-in-left 1s ease-out forwards;
+}
+
+
+@keyframes slide-in-right {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+.slide-in-right {
+  transform: translateX(100%);
+  opacity: 0;
+
+  /* Animation */
+  animation: slide-in-right 1s ease-out forwards;
+}
+
+@keyframes slide-in-up {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.slide-in-up {
+  transform: translateY(-100%);
+  opacity: 0;
+
+  /* Animation */
+  animation: slide-in-up 1s ease-out forwards;
+}
+
+
+@keyframes slide-in-down {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.slide-in-down {
+  transform: translateY(100%);
+  opacity: 0;
+
+  /* Animation */
+  animation: slide-in-down 1s ease-out forwards;
+}
